# synapse

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
dev/: test.sh
docs/: agent-daemon-test-playbook.md  code-coverage.md  design-doc.md  dynamic-tab-completion.md  llm-contextual-arguments.md  llm-natural-language.md  llm-spec-discovery.md  llm-workflow-prediction.md  nl-translation-quality.md  proactive-project-completions.md  proactive-spec-discovery.md  strategic-pivot.md  suggestion-algorithm.md
evals/: nl_cases.toml
plugin/: synapse.zsh
scripts/: coverage  install.sh  pre-commit  setup-hooks.sh
specs/builtin/: awk.toml  brew.toml  cargo.toml  chmod.toml  cp.toml  curl.toml  df.toml  diff.toml  docker.toml  du.toml  find.toml  gh.toml  git.toml  go.toml  grep.toml  helm.toml  jq.toml  kill.toml  kubectl.toml  ls.toml  make.toml  mv.toml  npm.toml  pip.toml  pnpm.toml  python.toml  rm.toml  rsync.toml  scp.toml  sed.toml  ssh.toml  systemctl.toml  tar.toml  terraform.toml  tmux.toml  uv.toml  wget.toml  yarn.toml
src/: cache.rs  completion_context.rs  compsys_export.rs  config.rs  help_parser.rs  lib.rs  llm.rs  logging.rs  main.rs  nl_cache.rs  project.rs  protocol.rs  ranking.rs  security.rs  session.rs  spec.rs  spec_autogen.rs  spec_cache.rs  spec_store.rs  test_helpers.rs  workflow.rs  zsh_completion.rs
src/cli/: add.rs  mod.rs  run_generator.rs  scan.rs  shell.rs  translate.rs  update.rs
src/completion_context/: builder.rs  mod.rs  tokenizer.rs
src/compsys_export/: export.rs  filesystem.rs  format.rs  mod.rs
src/daemon/: handlers.rs  lifecycle.rs  mod.rs  probe.rs  rpc.rs  server.rs  shell.rs  state.rs
src/daemon/use_cases/: command_executed.rs  complete_command.rs  daemon_control.rs  mod.rs  nl_context.rs  run_generator.rs  translate_natural_language.rs
src/llm/: client.rs  mod.rs  prompt.rs  response.rs  scrub.rs
src/providers/: ai.rs  context.rs  environment.rs  filesystem.rs  history.rs  llm_argument.rs  mod.rs  spec.rs  workflow.rs  workflow_llm.rs
src/spec_store/: discovery.rs  generator.rs  help_parser.rs  project_specs.rs  sandbox.rs
src/zsh_completion/: fpath.rs  generator.rs  mod.rs  parser.rs
tests/: completion_context_tests.rs  context_tests.rs  contract_tests.rs  environment_tests.rs  filesystem_tests.rs  history_tests.rs  integration_tests.rs  plugin_parse_test.zsh  plugin_paste_test.zsh  probe_tests.rs  security_tests.rs  spec_tests.rs
tests/common/: mod.rs
tests/fixtures/: tsv_complete_result.golden  tsv_error.golden  tsv_list.golden
