[package]
name = "synapse"
version = "0.1.0"
edition = "2021"
description = "Spec engine and NL translation layer for Zsh"
license = "MIT"

[lib]
name = "synapse"
path = "src/lib.rs"

[[bin]]
name = "synapse"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
clap = { version = "4", features = ["derive"] }
moka = { version = "0.12", features = ["future"] }
dirs = "6"
thiserror = "2"
anyhow = "1"
cargo_toml = "0.22"
gix-discover = "0.47"
gix-ref = "0.59"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
