[package]
name = "synapse"
version = "0.1.0"
edition = "2021"
description = "Spec engine and NL translation layer for Zsh"
license = "MIT"

[lib]
name = "synapse"
path = "src/lib.rs"

[[bin]]
name = "synapse"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "process", "time"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
thiserror = "2"
anyhow = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
